# forever-beauty-api

./: .env.example  .gitignore  Dockerfile  README.md  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
scripts/: build_and_push.sh  ec2_deploy.sh  ecs_deploy.sh
src/: config.py  main.py
src/api/v1/: endpoints.py
src/domain/: models.py
src/services/: face_detection.py
tests/: conftest.py
tests/e2e/: test_endpoints.py
